Made adjustments to stock-info-service